syntax = "proto2";

import "pyatv/mrp/protobuf/ContentItemMetadata.proto";
import "pyatv/mrp/protobuf/LanguageOption.proto";

message ContentItem {
  optional string identifier = 1;
  optional ContentItemMetadata metadata = 2;
  optional bytes artworkData = 3;
  optional string info = 4;
  repeated LanguageOption availableLanguageOptions = 5;
  repeated LanguageOption currentLanguageOptions = 6;
//  optional Lyrics lyrics = 7;
//  repeated Sections sections = 8;
  optional string parentIdentifier = 9;
  optional string ancestorIdentifier = 10;
  optional string queueIdentifier = 11;
  optional string requestIdentifier = 12;
  optional int32 artworkDataWidth = 13;
  optional int32 artworkDataHeight = 14;
}