syntax = "proto2";

import "pyatv/protocols/mrp/protobuf/ProtocolMessage.proto";

extend ProtocolMessage {
  optional RegisterVoiceInputDeviceResponseMessage registerVoiceInputDeviceResponseMessage = 34;
}

message RegisterVoiceInputDeviceResponseMessage {
  optional int32 deviceID = 1;
  optional int32 errorCode = 2;
}